# Finops

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  install.sh  pyproject.toml  start.sh  stop.sh
.streamlit/: config.toml
api/: deps.py  main.py  middleware.py
api/models/: __init__.py  anomalies.py  (+10 more)
config/: settings.yaml
dagster_project/: config.py  db_schema.py  definitions.py
docs/: design-system.md  monitoring-webapp.md  ui-components.md
scripts/: dashboard.py  init_db.py  run_phase2.py  setup.py  streamlit_app.py
tests/: conftest.py  test_alert_dispatch.py  test_alert_history.py  test_anomaly_detection.py  test_anomaly_timeline.py  test_api_alert_rules.py  test_api_anomalies.py  test_api_anomaly_root_cause.py  test_api_budget.py  test_api_chargeback.py  test_api_cloud_config.py  test_api_cost_explorer.py  test_api_cost_heatmap.py  test_api_env_detail.py  test_api_filters.py  test_api_forecast.py  test_api_ops.py  test_api_overview.py  test_api_pipeline.py  test_api_recommendations.py  test_api_search.py  test_api_service_detail.py  test_api_settings.py  test_api_team_detail.py  test_arima_detector.py  test_asset_integration.py  test_autoencoder_detector.py  test_azure_generator.py  test_budget_alerts.py  test_budget_forecast.py  test_burn_rate.py  test_chargeback.py  test_cloud_compare.py  test_cloud_config.py  test_cost_allocation.py  test_cost_heatmap.py  test_cost_recommendations.py  test_cost_risk.py  test_cost_source_protocol.py  test_cost_trend.py  (+30 more)
web-app/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+183 files in other folders)
