[project]
name = "finops-platform"
version = "0.1.0"
description = "Local FinOps platform — cost visibility, variance analysis, and extensible multi-cloud support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyiceberg[sql-sqlite,pyarrow]>=0.7",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pyarrow>=14.0",
    "prophet>=1.1",
    "slack-sdk>=3.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "streamlit>=1.35",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_project"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = false
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["prophet", "prophet.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.dagster]
module_name = "dagster_project.definitions"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
